custom.css
/* Credits: github.com/PiotrSss/logseq-clean-themes/blob/main/custom.css */

@import url("https://cdn.jsdelivr.net/gh/tonsky/FiraCode@5.2/distr/fira_code.css");
@import url("https://cdn.jsdelivr.net/gh/pengx17/logseq-clean-themes-alt@1.7.1/code-mirror.css");
@import url(https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100;0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap);
@import url("https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100;0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@100;300;400;500;700;900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Material+Icons&display=block");

/***************************************************************
****************************************************************
****************************************************************
****************************** MAIN ****************************
****************************************************************
****************************************************************
***************************************************************/

:root {
  --ls-main-content-max-width: 1200px;

  --ct-page-border-radius: 5px;

  --ct-font-family: "Noto Sans SC", sans-serif;
  --ct-page-title-font-family: Asap, "Noto Sans SC", sans-serif;
  --ct-text-size: 1em;
  --ct-line-height: 1.5;
  --ls-font-family: var(--ct-font-family);

  --ct-page-title-font-size: 36px;
  --ct-page-title-line-height: 40px;
  --ct-page-title-font-weight: 900;
  --ct-page-title-font-style: normal;

  --ct-heading-font-family: var(--ct-page-title-font-family);
  --ct-heading-font-size: 25px;
  --ct-heading-font-weight: 700;
  --ct-heading-font-style: normal;

  --ct-checkbox-border-radius: 2px;
  --ct-task-done-text-decoration: none;

  --ct-external-link-padding: 0 2px;
  --ct-external-link-border-radius: 0;
  --ct-external-link-text-decoration: none;
  --ct-external-link-text-decoration-hover: none;
  --ct-external-link-border-bottom: 1px solid;
  --ct-external-link-border-bottom-hover: var(--ct-external-link-border-bottom);
  --ct-external-link-text-decoration-inside-block-reference: none;
  --ct-external-link-text-decoration-inside-block-reference-hover: none;
  --ct-page-reference-border-radius: 2px;
  --ct-page-reference-brackets-display: inline;
  --ct-tag-padding: 2px;
  --ct-tag-border-radius: 2px;
  --ct-tag-opacity: 1;
  --ct-tag-opacity-hover: 1;
  --ct-block-reference-padding: 1px 5px;
  --ct-block-reference-padding-inside-another: 0 0 0 0.25em;
  --ct-block-reference-font-size: 0.95em;
  --ct-block-reference-font-family: inherit;
  --ct-block-reference-font-style: inherit;
  --ct-block-reference-font-weight: inherit;
  --ct-mark-border-radius: 2px;
  --ct-italics-font-weight: inherit;
  --ct-italics-font-family: inherit;
  --ct-bold-font-weight: 700;
  --ct-bold-font-family: inherit;
  --ct-code-font-family: "Fira Code", Monaco, Menlo, Consolas, "COURIER NEW",
    monospace;
  --ct-inline-code-font-size: 0.85em;
  --ct-inline-code-font-style: inherit;
  --ct-inline-code-border-radius: 2px;
  --ct-inline-code-padding: 2px 5px;

  --ct-sidebar-item-border: var(--ct-main-view-border);
  --ct-sidebar-item-border-radius: 5px;
  --ct-sidebar-title-font-family: var(--ct-page-title-font-family);

  --ct-tag-shadow: 1px 1px rgb(136, 136, 136);

  --ct-header-height: 2.4em;
  --ct-topbar-backdrop: blur(20px);
}

:root.is-mac {
  --ct-font-family: Overpass, "Noto Sans SC", sans-serif;
}

html,
body {
  line-height: var(--ct-line-height);
  font-size: var(--ct-text-size);
  font-family: var(--ls-font-family);
  overscroll-behavior-y: none;
  background: var(--ls-primary-background-color);
  -webkit-font-smoothing: auto;
}

/* Some tweaks on making this theme a bit more compact on mobile.
   Mobile cap is 640px */
@media (max-width: 640px) {
  html {
    font-size: 14px;
  }
  #main-content-container {
    padding: 0;
  }
  .cp__sidebar-main-content > div {
    padding: 1px 1em 1em 1em;
    border: none;
  }
  a.title h1.title {
    font-size: 24px;
    margin-bottom: 1rem;
  }

  .custom-query {
    padding: 0 1rem;
  }
}

.cp__sidebar-main-content {
  width: 100%;
}

#app-container {
  background: var(--ct-background);
}

#main-content-container {
  margin-top: 0 !important;
}

/* bullet dropdown menu */

.bg-base-3 {
  background-color: var(--ct-menu-dropdown-background);
}

/* page/block autocomplete */

.absolute-modal {
  width: fit-content;
  overflow: hidden;
  min-width: 0 !important;
  max-height: none !important;
}

.datepicker {
  margin-top: 0;
}

/* fix slash command no scrollbar issue */
#ui__ac-inner.hide-scrollbar::-webkit-scrollbar {
  display: initial;
}

/* weird vertical border on the left side of the screen */

#sidebar-nav-wrapper {
  border: none !important;
}

/* loading screen */

.cp__sidebar-main-content > .mt-20 {
  display: none;
}

/* Page file path offset fix */
#main-content-container
  > div
  > div
  > div
  > div.relative
  > div:nth-child(3)
  > div.content
  > div
  > span
  + a {
  margin-top: 2px;
}

.cp__header,
.cp__right-sidebar-topbar {
  backdrop-filter: var(--ct-topbar-backdrop);
  background-color: var(--ct-topbar-background) !important;
}

.cp__header::after,
.cp__right-sidebar-topbar::after {
  left: 0;
  right: 0;
  height: 1px;
  z-index: 1;
  position: absolute;
  top: 100%;
  background-color: rgba(0, 0, 0, 0.16);
  display: block;
  content: "";
}
/* ... */

